@@ -36,7 +36,10 @@ Version 2.1
 - Added support for async/await to Python 3 lexer.
 
 - Rewrote linenos option for TerminalFormatter (it's better, but slightly
-  different output than before).
+  different output than before).  (#1147)
+
+- Javascript lexer now supports most of ES6.  (#1100)
+
 
 Version 2.0.3
 -------------
